@@ -1,7 +1,7 @@
 # get the series extent fromSEE pre-cached GeoJSON data and plot on Google Maps
 seriesExtentAsGmap <- function(s, timeout=60, exp=1.25) {
-  if(!require(dismo))
-    stop('please install the `dismo` package', call.=FALSE)
+  if(!require(dismo) & !require(raster) & !require(rgdal))
+    stop('please install the `raster`, `rgdal` and `dismo` packages', call.=FALSE)
   
 	# load series extent data in WGS84 GCS
 	x <- seriesExtent(s, timeout)
@@ -21,33 +21,12 @@ seriesExtentAsGmap <- function(s, timeout=60, exp=1.25) {
 }
 
 
-# get the series extent from SoilWeb KMZ service and return as SpatialPolygonsDataFrame
-# seriesExtent <- function(s, timeout=60) {
-# 	
-# 	# make URL to SoilWeb KMZ
-# 	u <- URLencode(paste('http://casoilresource.lawr.ucdavis.edu/soil_web/reflector_api/soils.php?what=soil_series_extent&q_string=', s, '&query_level=mapunit', sep=''))
-# 	
-# 	# init temp files / dirs
-# 	td <- tempdir()
-# 	tf.kmz <- tempfile(fileext='kmz')
-#   
-# 	# note that we are transfering as binary (KMZ), extend timeout if needed
-# 	download.file(url=u, destfile=tf.kmz, mode='wb', extra=c(timeout=timeout))
-# 	
-# 	# readOGR can't open KMZ files directly, so we must unzip
-# 	unzip(zipfile=tf.kmz, files='doc.kml', exdir=td)
-# 	
-# 	# load into sp object and clean-up
-# 	x <- readOGR(dsn=file.path(td, 'doc.kml'), layer='Soil Series Extent')
-# 	unlink(tf.kmz)
-# 	
-# 	# return in WGS84 GCS
-# 	return(x)
-# }
-
 
 # get pre-cached series extent GeoJSON from SoilWeb server
 seriesExtent <- function(s, timeout=60) {
+  if(!require(rgdal))
+    stop('please install the `rgdal` package', call.=FALSE)
+  
   # encode series name
   s <- gsub(pattern=' ', replacement='_', x=tolower(s))
   
@@ -60,8 +39,6 @@ seriesExtent <- function(s, timeout=60) {
   
   # download GeoJSON file
   download.file(url=u, destfile=tf.json, extra=c(timeout=timeout), quiet=TRUE)
-  
-  ogrListLayers(tf.json)
   
   # load into sp object and clean-up
   x <- readOGR(dsn=tf.json, layer='OGRGeoJSON', verbose=FALSE)
